export interface ConfigurationAgentAI {
  id: string;
  prompt_systeme: string;
  parametres_voix: string;
}