export interface ReferentielServices {
  id: string;
  id_referentiel: string;
  nom_service: string;
  prix: string; 
  instructions_preparation: string;
  est_urgent: boolean;
}