export interface RendezVous {
  id: string;
  compte_professionnel_id: string;
  client_id: string;
  referentiel_services_id: string;
  heure_debut: Date;
  statut: string;
  consignes_specifiques: string;
}